package com.lld.problems.bookmyshow.code.constants;

public enum BookingStatus {
    PENDING,
    CONFIRMED,
    CANCELLED,
    FAILED
}
