package com.lld.problems.bookmyshow.code.constants;

public enum SeatType {
    REGULAR,
    PREMIUM,
    VIP
}
