package com.lld.problems.bookmyshow.code.constants;

public enum ShowType {
    MOVIE,
    CONCERT,
    STANDUP,
    DRAMA
}
